# program-Dhruv26052005

./: DEPLOYMENT_GUIDE.md  FRONTEND_QUICKSTART.md  PROJECT_DESCRIPTION.md  README.md  verify-setup.ps1
anchor_project/: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
anchor_project/programs/polling_dapp/: Cargo.toml
anchor_project/programs/polling_dapp/src/: lib.rs
anchor_project/tests/: polling_dapp.ts
frontend/: README.md  config-overrides.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  idl.ts
frontend/src/components/: PollingApp.tsx
