[package]
name = "polling_dapp"
version = "0.1.0"
description = "A decentralized polling system on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "polling_dapp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
